--- a/week-16/resize3/build.gradle
+++ b/week-16/resize3/build.gradle
@@ -28,4 +28,5 @@ dependencies {
 	runtime('org.springframework.boot:spring-boot-devtools')
 	runtime('mysql:mysql-connector-java')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile group: 'com.h2database', name: 'h2', version: '1.0.60'
 }
